[gd_scene load_steps=11 format=3 uid="uid://ci3rv6arq57ut"]

[ext_resource type="Texture2D" uid="uid://dyfgahnrnw8fd" path="res://ASSETS/placeables/tower.png" id="1_2apcv"]
[ext_resource type="Script" uid="uid://xj6n83wcdefu" path="res://game/prefabs/alice_placeables/tower.gd" id="1_rppiq"]
[ext_resource type="PackedScene" path="res://game/game/damage/target.tscn" id="3_yxqci"]
[ext_resource type="PackedScene" uid="uid://dwosftn1w1b0p" path="res://game/game/mana/mana_giver.tscn" id="4_41wdu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lnvb4"]
atlas = ExtResource("1_2apcv")
region = Rect2(0, 0, 50, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qnwu"]
atlas = ExtResource("1_2apcv")
region = Rect2(50, 0, 50, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifndd"]
atlas = ExtResource("1_2apcv")
region = Rect2(0, 70, 50, 70)

[sub_resource type="SpriteFrames" id="SpriteFrames_klqmc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnvb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qnwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifndd")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w0td8"]
size = Vector2(50, 50)

[sub_resource type="CircleShape2D" id="CircleShape2D_yxqci"]
radius = 322.002

[node name="Tower" type="StaticBody2D"]
script = ExtResource("1_rppiq")

[node name="Anim" type="AnimatedSprite2D" parent="."]
position = Vector2(25, 15)
sprite_frames = SubResource("SpriteFrames_klqmc")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(25, 25)
shape = SubResource("RectangleShape2D_w0td8")

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
position = Vector2(25, 0)
shape = SubResource("CircleShape2D_yxqci")

[node name="FiringPosition" type="Marker2D" parent="."]
position = Vector2(25, -5)

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="Target" parent="." instance=ExtResource("3_yxqci")]
maxHealth = 70
affiliation = 1

[node name="ManaGiver" parent="." instance=ExtResource("4_41wdu")]

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="body_shape_entered" from="Range" to="." method="_on_range_body_shape_entered"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="onDamage" from="Target" to="." method="_on_target_on_damage"]
[connection signal="onDeath" from="Target" to="." method="_on_target_on_death"]
